--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,42 @@
 [project]
-name = "DoktorKube"
+name = "docktor"
 version = "0.1.0"
-description = "AI tool for Kubernetes debugging"
+description = "Kubernetes cluster analysis and debugging tool"
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-    "langgraph",
-    "kubernetes",
-    "langchain"
+license = { file = "LICENSE" }
+authors = [
+    { name = "Docktor Team" }
 ]
+requires-python = ">=3.12"
+keywords = ["kubernetes", "debugging", "devops", "cluster-analysis"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Intended Audience :: System Administrators",
+    "Topic :: System :: Systems Administration",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+]
+dependencies = [
+    "langgraph>=0.2.0",
+    "kubernetes>=30.0.0",
+    "langchain>=0.3.0",
+    "langchain-google-genai>=2.0.0",
+    "typing-extensions>=4.0.0"
+]
+
+[project.urls]
+Homepage = "https://github.com/docktor-team/docktor"
+Repository = "https://github.com/docktor-team/docktor"
+"Bug Tracker" = "https://github.com/docktor-team/docktor/issues"
+
+[project.scripts]
+docktor = "docktor.main:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/docktor"]
