--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
-name = "docktor"
+name = "K8sDocktor"
 version = "0.1.0"
 description = "Kubernetes cluster analysis and debugging tool"
 readme = "README.md"
 license = { file = "LICENSE" }
 authors = [
-    { name = "Docktor Team" }
+    { name = "Green Wolve" }
 ]
 requires-python = ">=3.12"
 keywords = ["kubernetes", "debugging", "devops", "cluster-analysis"]
@@ -26,17 +26,3 @@ dependencies = [
     "typing-extensions>=4.0.0"
 ]
 
-[project.urls]
-Homepage = "https://github.com/docktor-team/docktor"
-Repository = "https://github.com/docktor-team/docktor"
-"Bug Tracker" = "https://github.com/docktor-team/docktor/issues"
-
-[project.scripts]
-docktor = "docktor.main:main"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/docktor"]
